# code-complexity

./: .gitignore  README.md  demo.py  pyproject.toml  report.html  sample.py
code_complexity/: analyzer.py  cli.py  visualizer.py
code_complexity.egg-info/: SOURCES.txt  requires.txt
