[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "code-complexity"
version = "0.1.0"
description = "A CLI tool to analyze and visualize code complexity."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "radon>=5.1",
    "matplotlib>=3.5",
    "jinja2>=3.0"
]

[project.scripts]
code-complexity = "code_complexity.cli:analyze"